.circleci/template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: mine
Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      SecurityGroupIds:
      - !Ref InstanceSecurityGroup
      # Change this, as applicable to you      
      KeyName: prom
      # Change this, as applicable to you
      # You may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
      ImageId: "ami-008fe2fc65df48dac"
      InstanceType: t2.micro
      Tags:
      - Key: Name
        Value: prometheus
  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      SecurityGroupIds:
      - !Ref InstanceSecurityGroup
      # Change this, as applicable to you      
      KeyName: prom.pem
      # Change this, as applicable to you
      # You may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
      ImageId: 'ami-008fe2fc65df48dac'
      InstanceType: t2.micro
      Tags:
      - Key: Name
        Value: node-exporter
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '9090' #for prometheus
        ToPort: '9090'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '9093' #for the Alert manager
        ToPort: '9093'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '9100' # for prometheus Node Exporter
        ToPort: '9100'
        CidrIp: 0.0.0.0/0
